# exoparams

./: .travis.yml  README.md  README.rst  setup.cfg  setup.py
docs/: index.rst  rtd-pip-requirements
exoparams/: __init__.py  params.py
exoparams/data/: param_units.json
exoparams/tests/: test_params.py
